--- a/Registro/MainWindow.xaml
+++ b/Registro/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+        <Button x:Name="btninserisci" Content="inserisci" HorizontalAlignment="Left" Margin="506,118,0,0" VerticalAlignment="Top" Height="51" Width="89" Click="btninserisci_Click"/>
+        <TextBlock x:Name="nome" HorizontalAlignment="Left" Margin="189,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
+        <TextBlock x:Name="nome1" HorizontalAlignment="Left" Margin="123,105,0,0" TextWrapping="Wrap" Text="nome" VerticalAlignment="Top" Height="13" Width="66"/>
+        <TextBlock HorizontalAlignment="Left" Margin="281,105,0,0" TextWrapping="Wrap" Text="cognome" VerticalAlignment="Top" Height="16" Width="69"/>
+        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Margin="123,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Height="55"/>
+        <TextBox x:Name="txtCognome" HorizontalAlignment="Left" Margin="280,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" Height="43"/>
 
     </Grid>
 </Window>
