--- a/Registro/MainWindow.xaml
+++ b/Registro/MainWindow.xaml
@@ -7,12 +7,20 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Button x:Name="btninserisci" Content="inserisci" HorizontalAlignment="Left" Margin="506,118,0,0" VerticalAlignment="Top" Height="51" Width="89" Click="btninserisci_Click"/>
-        <TextBlock x:Name="nome" HorizontalAlignment="Left" Margin="189,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top"/>
-        <TextBlock x:Name="nome1" HorizontalAlignment="Left" Margin="123,105,0,0" TextWrapping="Wrap" Text="nome" VerticalAlignment="Top" Height="13" Width="66"/>
-        <TextBlock HorizontalAlignment="Left" Margin="281,105,0,0" TextWrapping="Wrap" Text="cognome" VerticalAlignment="Top" Height="16" Width="69"/>
-        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Margin="123,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Height="55"/>
-        <TextBox x:Name="txtCognome" HorizontalAlignment="Left" Margin="280,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" Height="43"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="31*"/>
+            <ColumnDefinition Width="129*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="btninserisci" Content="inserisci" HorizontalAlignment="Left" Margin="351,118,0,0" VerticalAlignment="Top" Height="51" Width="89" Click="btninserisci_Click" Grid.Column="1"/>
+        <TextBlock x:Name="nome" HorizontalAlignment="Left" Margin="34,144,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Grid.Column="1"/>
+        <TextBlock x:Name="nome1" HorizontalAlignment="Left" Margin="123,105,0,0" TextWrapping="Wrap" Text="nome" VerticalAlignment="Top" Height="13" Width="66" Grid.ColumnSpan="2"/>
+        <TextBlock HorizontalAlignment="Left" Margin="126,105,0,0" TextWrapping="Wrap" Text="cognome" VerticalAlignment="Top" Height="16" Width="69" Grid.Column="1"/>
+        <TextBox x:Name="txtNome" HorizontalAlignment="Left" Margin="123,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="93" Height="55" Grid.ColumnSpan="2"/>
+        <TextBox x:Name="txtCognome" HorizontalAlignment="Left" Margin="125,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="99" Height="43" Grid.Column="1"/>
+        <Button x:Name="btnVisualizza" Content="Visualizza" HorizontalAlignment="Left" Margin="123,232,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="67" Width="93" Click="btnVisualizza_Click"/>
+        <ListBox x:Name="lstNome" Grid.Column="1" d:ItemsSource="{d:SampleData ItemCount=5}" Margin="175,192,336,69"/>
+        <Button x:Name="btnElimina" Content="Elimina" HorizontalAlignment="Left" Margin="123,349,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Height="49" Width="93" Click="btnElimina_Click"/>
+        <TextBox Grid.Column="1" HorizontalAlignment="Left" Height="25" Margin="161,387,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="162"/>
 
     </Grid>
 </Window>
